--- a/templates/index2.html
+++ b/templates/index2.html
@@ -14,12 +14,22 @@ window.onload = function(){
     <div class="text col-lg-6 col-md-12 col-12">
       <h6>IL PROGETTO</h6>
       <h1>Insieme per proteggere, digitalizzare e valorizzare</h1>
-      <p> L'<a href=https://www.univr.it/it/>Università di Verona</a> in collaborazione con la <a href=http://bibliotecacapitolare.org/en/the-biblioteca-capitolare-of-verona/>Fondazione Biblioteca Capitolare </a>
+      <p>
+        Il sito Capitolar-e è frutto di un progetto di ricerca interdisciplinare nato dalla collaborazione 
+        tra i Dipartimenti di Culture e Civiltà e di Informatica dell’Università di Verona.
+        Il progetto ha preso avvio grazie a un consistente finanziamento dell’ateneo 
+        veronese ed è stato reso possibile grazie a una convenzione stipulata con 
+        la Biblioteca Capitolare di Verona. Attualmente vede impegnati docenti di 
+        diverse discipline afferenti ai due dipartimenti, ricercatori, assegnisti,
+         dottorandi. Sono attivi accordi di scambio e collaborazione con enti e atenei 
+         di altre parti d’Italia.
+      </p>
+ <!--      <p> L'<a href=https://www.univr.it/it/>Università di Verona</a> in collaborazione con la <a href=http://bibliotecacapitolare.org/en/the-biblioteca-capitolare-of-verona/>Fondazione Biblioteca Capitolare </a>
         ha iniziato una campagna di analisi, digitalizzazione e valorizzazione
         dei beni culturali contenuti all'interno della Biblioteca Capitolare di Verona.
         Il progetto multidisciplinare coinvolge il <a href=https://www.dcuci.univr.it/>Dipartimento di Culture e Civiltà</a> ed il <a href=https://www.di.univr.it/>Dipartimento di Informatica</a>
         insieme al <a href=https://www.univr.it/it/organizzazione/sistema-bibliotecario-di-ateneo/>Sistema Bibliotecario di Ateneo</a>.
-        Questo sito ospita le risorse digitali del progetto.</p>
+        Questo sito ospita le risorse digitali del progetto.</p> -->
     </div>
     <div class="img col-lg-6 col-md-12 col-12">
       <img class="img-fluid" src={{url_for('static',filename='imgs/unispiralecolori.svg')}} alt="Disegno esemplificativo con i nomi dei partecipanti del progetto.">  
