--- a/templates/progetti.html
+++ b/templates/progetti.html
@@ -3,8 +3,12 @@
 
 <section class="progetti container" >
     <h1 class="bd-title" id="content">Progetti e iniziative correlate</h1>
-    <p class="bd-lead">Il portale Capitolar-<b>e</b> è stato creato per servire diversi progetti di ricerca, il principale è il progetto DascabiDa.
-        Di seguito vengono riportati i principali progetti ed iniziative collegati al portale. </p>
+    <p class="bd-lead">
+        Il sito Capitolar-<b>e</b>costituisce la porta d’ingresso ai progetti di ricerca che il LaMeDan ha promosso in collaborazione con la Biblioteca Capitolare di Verona. Le sezioni principali sono cinque: 1) il catalogo elettronico open-access dei manoscritti integrato con le immagini dei codici digitalizzati ad altissima definizione; 2) il catalogo storico che ospita le schede descrittive redatte da don Antonio Spagnolo, codificate e associate tramite un collegamento ipertestuale a 
+        una prima selezione di codici digitalizzati; 3) l’inventario elettronico 
+        dell’Archivio capitolare con le schede delle pergamene associate alle 
+        relative immagini digitalizzate; 4) una sezione di contributi audio-video che raccontano la storia e lo sviluppo del progetto; 5) una sezione che ospita i prodotti della ricerca scaturiti dalle attività del progetto; 6) una sezione dedicata alle iniziative di alta formazione (Summer schools, master, convegni) che hanno affiancato e si sono avvalse della consulenza del Laboratorio e del personale impiegato nel progetto.
+    </p>
 </section>
 
 <div class="container withnavbar">
