--- a/templates/risultati2.html
+++ b/templates/risultati2.html
@@ -44,7 +44,7 @@
             <tr><td><b>Consistenza: </b></td><td>{{field['consistenza']}}</td></tr>
             <tr><td><b>Numerazione delle carte: </b></td><td>{{field['numerazione_carte']}}</td></tr>
             <tr><td><b>Carte di guardia: </b></td><td>{{field['carte_di_guardia']}}</td></tr>
-            <tr><td><b>Prospetto fascicolazione: </b></td><td>{{field['prospetto_fascicolazione']}}</td></tr>
+            <tr><td><b>Prospetto fascicolazione: </b></td><td>{{field['prospetto_fascicolazione']|safe}}</td></tr>
             <tr><td><b>Arrangiamento dei fogli (regola di Gregory): </b></td><td>{{field['arrangiamento_fogli_gregory']}}</td></tr>
             <tr><td><b>Dimensioni: </b></td><td>{{field['dimensioni']}}</td></tr>
             <tr><td><b>Rigatura: </b></td><td>{{field['rigatura']}}</td></tr>
