Modificate testi ed immagini

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -16,10 +16,10 @@ window.onload = function(){
       <h1>Insieme per proteggere, digitalizzare e valorizzare</h1>
       <p>
         Il sito Capitolar-e è frutto di un progetto di ricerca interdisciplinare nato dalla collaborazione 
-        tra i Dipartimenti di Culture e Civiltà e di Informatica dell’Università di Verona.
+        tra i Dipartimenti di <a href=https://www.dcuci.univr.it/>Culture e Civiltà</a> e di <a href=https://www.di.univr.it/>Informatica</a> insieme al <a href=https://www.univr.it/it/organizzazione/sistema-bibliotecario-di-ateneo/>Sistema Bibliotecario di Ateneo</a> dell’Università di Verona.
         Il progetto ha preso avvio grazie a un consistente finanziamento dell’ateneo 
         veronese ed è stato reso possibile grazie a una convenzione stipulata con 
-        la Biblioteca Capitolare di Verona. Attualmente vede impegnati docenti di 
+        la <a href=http://bibliotecacapitolare.org/en/the-biblioteca-capitolare-of-verona/>Biblioteca Capitolare di Verona</a>. Attualmente vede impegnati docenti di 
         diverse discipline afferenti ai due dipartimenti, ricercatori, assegnisti,
          dottorandi. Sono attivi accordi di scambio e collaborazione con enti e atenei 
          di altre parti d’Italia.
