--- a/templates/includes/carousel.html
+++ b/templates/includes/carousel.html
@@ -3,13 +3,21 @@
       <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"></li>
       <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"></li>
       <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"></li>
+      <li data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"></li>
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="5000">
         <img src={{url_for('static',filename='imgs/1.jpeg')}} class="d-block w-100" alt="Immagine della sala principale dalla Biblioteca Capitolare.">
         <div class="carousel-caption d-none d-md-block">
           <h5>La biblioteca Capitolare di Verona.</h5>
-          <p>La biblioteca ha un patrimonio di oltre un migliaio di manoscritti alcuni risalenti ai primi secoli dopo Cristo.</p>
+          <p>La biblioteca ha un patrimonio di oltre un migliaio di manoscritti alcuni risalenti ai primi secoli dell'era volgare.</p>
+        </div>
+      </div>
+      <div class="carousel-item" data-bs-interval="5000">
+        <img src={{url_for('static',filename='imgs/1b.jpeg')}} class="d-block w-100" alt="Immagine di un palinsesto.">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Catalogazione avanzata.</h5>
+          <p>Un nuovo sistema di catalogazione per descrivere anche i codici più complessi.</p>
         </div>
       </div>
       <div class="carousel-item" data-bs-interval="5000">
