--- a/templates/about.html
+++ b/templates/about.html
@@ -16,8 +16,7 @@
         <section id="scopo">
             <br>
             <h1>Scopo del portale Capitolar-e</h1>
-            <p>Questo sito contiene i contenuti digitali riguardanti la Biblioteca capitolare 
-            di Verona raccolti e curati dall'Università di Verona. In questo portale è possibile accedere a dati relativi alla catalogazione dei beni librari ed alle digitalizzazioni dei manoscritti.
+            <p>Il sito Capitolar-<b>e</b> costituisce la porta d’ingresso ai progetti di ricerca che il LaMeDan ha promosso in collaborazione con la Biblioteca Capitolare di Verona. Le sezioni principali sono cinque: 1) il catalogo elettronico open-access dei manoscritti integrato con le immagini dei codici digitalizzati ad altissima definizione; 2) il catalogo storico che ospita le schede descrittive redatte da don Antonio Spagnolo, codificate e associate tramite un collegamento ipertestuale a una prima selezione di codici digitalizzati; 3) l’inventario elettronico dell’Archivio capitolare con le schede delle pergamene associate alle relative immagini digitalizzate; 4) una sezione di contributi audio-video che raccontano la storia e lo sviluppo del progetto; 5) una sezione che ospita i prodotti della ricerca scaturiti dalle attività del progetto; 6) una sezione dedicata alle iniziative di alta formazione (Summer schools, master, convegni) che hanno affiancato e si sono avvalse della consulenza del Laboratorio e del personale impiegato nel progetto.
             </p>
             <p>
             Per avere informazioni più dettagliate per la visita della Biblioteca Capitolare e del museo diocesano,
