--- a/templates/credits.html
+++ b/templates/credits.html
@@ -25,7 +25,7 @@
         <section id="acquisi">
         <h3>Acquisizioni</h3>
         Le acquisizioni dei manoscritti sono state fatte in maggior parte dal 
-        Dr. Andrea Brugnoli. Le acquisizioni del manoscritto LXI sono state fatte dal
+        Dr. Andrea Brugnoli. Le acquisizioni del manoscritto XLIII(41) sono state fatte dal
         fotografo scientifico Vittorio Barra. 
         </section>
 
