--- a/templates/index2.html
+++ b/templates/index2.html
@@ -21,10 +21,13 @@ window.onload = function(){
         veronese ed è stato reso possibile grazie a una convenzione stipulata con 
         la <a href=http://bibliotecacapitolare.org/en/the-biblioteca-capitolare-of-verona/>Biblioteca Capitolare di Verona</a>. Attualmente vede impegnati docenti di 
         diverse discipline afferenti ai due dipartimenti, ricercatori, assegnisti,
-         dottorandi. Sono attivi accordi di scambio e collaborazione con enti e atenei 
-         di altre parti d’Italia.
+        dottorandi. Sono attivi accordi di scambio e collaborazione con enti e atenei 
+        di altre parti d’Italia.
       </p>
- <!--      <p> L'<a href=https://www.univr.it/it/>Università di Verona</a> in collaborazione con la <a href=http://bibliotecacapitolare.org/en/the-biblioteca-capitolare-of-verona/>Fondazione Biblioteca Capitolare </a>
+      <p>
+        Per saperne di più visita la <a href="/about">pagina dedicata</a>.
+      </p>
+ <!--   <p> L'<a href=https://www.univr.it/it/>Università di Verona</a> in collaborazione con la <a href=http://bibliotecacapitolare.org/en/the-biblioteca-capitolare-of-verona/>Fondazione Biblioteca Capitolare </a>
         ha iniziato una campagna di analisi, digitalizzazione e valorizzazione
         dei beni culturali contenuti all'interno della Biblioteca Capitolare di Verona.
         Il progetto multidisciplinare coinvolge il <a href=https://www.dcuci.univr.it/>Dipartimento di Culture e Civiltà</a> ed il <a href=https://www.di.univr.it/>Dipartimento di Informatica</a>
@@ -47,6 +50,8 @@ window.onload = function(){
       <p> Nella prima fase del progetto abbiamo progettato un nuovo sistema avanzato di catalogazione.
         Abbiamo inoltre cominciato a rendere disponibili i dati raccolti nelle precedenti campagne di catalogazione (Catalogo storico di Antonio Spagnolo) 
         e digitalizzazione (<i><a href="https://cdavr.dtesis.univr.it">Codice digitale degli archivi veronesi</a></i>, a cura di Andrea Brugnoli).
+
+        Esplora i dati della catalogazione antica <a href="/esplora">usando l'applicazione interattiva</a>.
         
        </p>
     </div>
@@ -75,6 +80,7 @@ window.onload = function(){
       <h1>Sai già cosa stai cercando?</h1>
       <p>Se sai già la segnatura del codice che stai cercando inseriscila sul
         campo segnatura e vai direttamente al bene che stai studiando! <i>Lege feliciter!</i>
+        Prova a digitare LXI...
         <p>
         <button id="focusbtn" type="button" class="btn btn-primary">Vai al campo segnatura</button>
        </p>
