--- a/templates/layout.html
+++ b/templates/layout.html
@@ -63,8 +63,10 @@
   </head>
 <!--         NAVBAR        -->
 {% include 'includes/navbar2.html' %}
+<!--  Example data spy   -->
+<!--     <body data-bs-spy="scroll" data-bs-target="#navbarCapi" data-bs-offset="150" tabindex="0">-->
 
-<body data-bs-spy="scroll" data-bs-target="#navbarCapi" data-bs-offset="150" tabindex="0">
+<body data-bs-offset="150" tabindex="0">
   <br> <br>
   <div class="alert alert-danger" role="alert">
     <p>
@@ -78,10 +80,20 @@
 
 
 <!-- Option 1: Bootstrap Bundle with Popper -->
-{% include 'includes/footer.html' %}
+<!-- Advanced footer -->
+<!-- {# {% include 'includes/footer.html' %} #}-->
+
+<footer>
+  <hr>
+  <p> Capitolar-e è gestito dal laboratorio <a class="bka" href=https://sites.hss.univr.it/laboratori_integrati/laboratorio-lamedan/>LaMeDan</a>. 
+    Non esitare a contattarci per ulteriori informazioni. Parte del materiale utilizzato potrebbe essere soggetto a copyright © 2021 </p>
+  <p>
+    <a class="bka" href=/privacypolicy >Privacy Policy</a>
+  <hr>
+  </p>
+</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 {% block dB_script_section %}
 {% endblock dB_script_section %}
-    
   </body>
 </html>
