--- a/static/custom.css
+++ b/static/custom.css
@@ -317,4 +317,8 @@ tr:nth-of-type(odd) {
     width: 100%;
     height: auto;
   }
+
+.error-template {padding: 40px 15px;text-align: center;}
+.error-actions {margin-top:15px;margin-bottom:15px;}
+.error-actions .btn { margin-right:10px; }
   
