Ri-organizzato il sito

--- a/templates/altaformazione.html
+++ b/templates/altaformazione.html
@@ -6,54 +6,106 @@
     <div class="row">
         <div class="sidenav">
             <p><b>Indice:</b></p>
-            <a href="#intr">Introduzione</a>
-            <a href="#oai">Open Archive Initiative</a>
-            <a href="#ark">Archival Resource Key (ARK)</a>
-            <a href="#iiif">Sfruttare il protocollo IIIF</a>
-            <a href="#rice">Ricerca avanzata</a>
-            <a href="#cita">Citare i manoscritti (Zotero)</a>
-            <a href="#aapi">Accesso alle API</a>
-            <a href="#bknd">Back-end</a>
+            <a href="#summer">Verona International Summer School in Medieval Manuscripts</a>
+            <a href="#master">Master in Scienze storiche, filologiche e tecnologie fisiche applicate allo studio e la conservazione dei beni culturali</a>
+     
         </div>
         <div class="col-md-7 col-sm-6">
-        <section id="intr">
-        <h3>Open-data</h3>
-        <p>
-            
-        </p>
-        </section>
-        <section id="oai">
-            <h3> Open Archive Initiative</h3>
+        <section id="scopo">
+            <br>
+            <h1>Alta formazione</h1>
+            <blockquote class="blockquote">
+                “La via per imparare è lunga se si procede per regole, breve e efficace se si procede per esempi.”
+(Lucio Anneo Seneca)
+            </blockquote>
             <p>
-                Se non lo si è già fatto si consiglia di scorrere la <a href="\">home</a>
-                del sito che funge da tutorial introduttivo alle funzionalità principali. Il sito è pensato per aiutare il lavoro degli studiosi che studiano la collezione
-                o beni specifici di essa. 
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
             </p>
+            <!-- <p>
+            Per avere informazioni più dettagliate per la visita della Biblioteca Capitolare e del museo diocesano,
+            vi invitiamo a consultare <a href="http://bibliotecacapitolare.org/">il sito ufficiale della biblioteca Capitolare di Verona</a>. 
+            </p> -->
         </section>
-        <section id="ark">
-            <h3>>Archival Resource Key (ARK)</h3>
-            <p></p>
-        </section>
-        <section id="iiif">
-            <h3> Sfruttare il protocollo IIIF</h3>
-            <p></p>
-        </section>
-        <section id="rice">
-            <h3> Ricerca avanzata</h3>
-            <p></p>
-        </section>
-        <section id="cita">
-            <h3> Citare i manoscritti (Zotero)</h3>
-            <p></p>
-        </section>
-        <section id="aapi">
-            <h3> Acesso alle API</h3>
-            <p></p>
-        </section>
-        <section id="bknd">
-            <h3> Back-end</h3>
-            <p></p>
-        </section>
+        </div>        
+        <section id="summer" class="storia  py-5 ">
+            <div class="row align-items-center container py-5 mx-auto">
+                
+                <div class="text col-lg-6 col-md-12 col-12">
+                    <h6>SUMMER SCHOOL</h6>
+                    <h1>Verona International Summer School in Medieval Manuscripts</h1>
+                    Nel 2019 e nel 2020 si sono svolte le prime due edizioni di una scuola estiva a vocazione principalmente 
+                    internazionale dedicata ai manoscritti tardoantichi e medievali (415-1500) conservati presso l
+                    a Biblioteca Capitolare di Verona. I corsi, alternando lezioni teoriche a esercitazioni pratiche 
+                    (hands-on labs), hanno offerto a giovani studiosi in formazione (scelti tra storici, paleografi, 
+                    filologi, archeologi e storici dell’arte) una irripetibile occasione per approfondire le proprie 
+                    conoscenze direttamente sui materiali di una delle più antiche e meglio conservate biblioteche del 
+                    medioevo occidentale.
+
+                    Per approfondire i temi e i contenuti proposti nelle due edizioni, se ne vedano qui sotto i relativi
+                    programmi.
+                        </p>
+              </div>
+              <div class="img col-lg-6 col-md-12 col-12">
+                <img class="img-fluid" src="https://lh3.googleusercontent.com/proxy/EFRyb8ChjSuMJmONKfSNW-cN7EojYoMm4w9nGHzu0nCk3wlVYI_chqwH8GZ7dCyordUOWc4hU13pgQWSXpHxw5QI0vIZ_Q9zKZk9dhOD1LgWKA">
+            </div>
+            </div>
+          </section>
+
+        <section id="master" class="illaboratorio  py-5 ">
+            <div class="row align-items-center container py-5 mx-auto">
+                <div class="img col-lg-6 col-md-12 col-12">
+                    <img class="img-fluid" src=http://lezioni.meneghetti.univr.it//imageapi/41/m0041_0visn18_0012a1.jp2/pct:27.50,10.00,34.50,70.67/full/0/default.jpg alt="Immagine del laboratorio, e del sistema di digitalizzazione.">   
+                  </div>
+                  <div class="text col-lg-6 col-md-12 col-12">
+                    <h6>MASTER DI SECONDO LIVELLO</h6>
+                    <h1>Master in Scienze storiche, filologiche e tecnologie fisiche applicate allo studio e la conservazione dei beni culturali</h1>
+                    <p>Comitato scientifico: Massimiliano Bassetti, Fabio Coden, Carlo Combi, Claudia Daffara, Paolo de Paolis, Edoardo Ferrarini, Tiziana Franco, Paolo Pellegrini, Maria Clara Rossi, Paolo Scattolin, Arnaldo Soldani, Marco Stoffella</p>
+                    <p>
+                    Il corso, la cui attivazione è prevista per l’ottobre del 2021, intende formare figure
+                     altamente professionali nei settori strategici della tutela, promozione e valorizzazione
+                      dei beni archivistici e bibliotecari. In tal senso il Master offre formazione e 
+                      aggiornamento professionale per archivisti, bibliotecari, addetti agli istituti 
+                      culturali preposti alla tutela, promozione e valorizzazione dei beni archivistici e 
+                      librari (soprattutto antichi e moderni).</p>
+                    <p>Il Master si propone di offrire ai frequentanti una formazione specialistica, 
+                        garantita da un equilibrato bilanciamento tra lezioni teoriche e attività 
+                        pratico-esercitative, potendo contare sull’ineguagliabile patrimonio, librario e 
+                        archivistico, reso disponibile dalla Biblioteca Capitolare di Verona e dalle 
+                        restanti istituzioni di conservazione cittadine. Tale formazione insisterà sulle 
+                        tecniche per guidano attraverso l’osservazione analitica, lo studio, la comprensione,
+                        la valorizzazione e la promozione del patrimonio archivistico e bibliotecario 
+                        dall'Antichità all'età contemporanea. Una specifica attenzione sarà riservata, 
+                        con alcuni moduli di insegnamento dedicati, agli sviluppi ermeneutici portati dalle
+                        metodologie informatiche (che hanno rivoluzionato sia il settore dei beni 
+                        archivistico-librari, sia quello della ricerca) e dalle tecniche di analisi 
+                        diagnostico-strumentale applicate al libro e al documento antico e medievale.
+                    </p>
+
+                    <p>
+                        Sia i docenti coinvolti, sia quelli che compongono il comitato scientifico del Master
+                        afferiscono al Laboratorio di Studi Medievali e Danteschi, incardinato nel 
+                        Dipartimento di Culture e civiltà. Questo laboratorio è la cellula in cui si sviluppa
+                        il progetto di catalogazione scientifica, digitalizzazione e indagine diagnostica a carico 
+                        dei beni librari e archivistici conservati dalla Biblioteca Capitolare di Verona.
+                        Questa circostanza garantisce la più stretta circolarità tra il momento della ricerca
+                        applicata e la didattica offerta dal Master, attraverso la valorizzazione di un fondo 
+                        di conservazione libraria e documentaria unico al mondo.
+
+                    </p>
+                    <p>
+                        Tra i possibili sbocchi professionali si colloca la carriera nel settore della ricerca
+                        e dell'università, grazie alle specifiche competenze, sia scientifiche sia gestionali,
+                        sia comunicative sia tecnologiche, offerte dal Master.
+
+                    </p>
+                    <p>
+                        La pagina sarà aggiornata quanto prima con la pubblicazione del piano di studi.
+                    </p>
+                  </div>
+                </div>
+              </section>
+
+
         <div>
     </div>
 </div>
