--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -8,8 +8,8 @@
         <div class="row">
         	<div class="col-md-3 footer-brand animated fadeInLeft">
                 <h2>Capitolar-<b>e</b></h2>
-                
-                <p> Capitolar-e è gestito dal laboratorio <a class="bka" href=https://sites.hss.univr.it/laboratori_integrati/laboratorio-lamedan/>LaMeDan</a>. 
+                <p class="bd-lead">Il portale Capitolar-<b>e</b> è curato e mantenuto dall laboratorio <a href=https://sites.hss.univr.it/laboratori_integrati/laboratorio-lamedan/>LaMeDan</a>, parte
+                    dei <a href=https://sites.hss.univr.it/laboratori_integrati/>laboratori integrati</a> dell'Università di Verona.
                     Non esitare a contattarci per ulteriori informazioni.
                     </p>
                 <p> Parte del materiale utilizzato potrebbe essere soggetto a copyright © 2021 </p>
