--- a/templates/includes/navbar2.html
+++ b/templates/includes/navbar2.html
@@ -26,7 +26,7 @@
           </li> -->
       </ul>
       <form class="d-flex"  data-target="#vai" data-bs-target="#vai" action="{{ url_for('search') }}" method="POST">
-        <input class="form-control me-2 form-control input-lg" id="autocomplete" data-target="#vai" data-bs-target="#vai"   name="autocomplete" type="search" aria-label="Search">
+        <input class="form-control me-2 form-control input-sm" id="autocomplete" data-target="#vai" data-bs-target="#vai"   name="autocomplete" type="search" aria-label="Search">
         <label class="nvb" for="autocomplete">Ricerca per segnatura</label>
         <button class="btn btn-outline-success"  data-target="#vai" data-bs-target="#vai" type="submit">Vai</button>
       </form>
