--- a/templates/about.html
+++ b/templates/about.html
@@ -15,29 +15,37 @@
         <div class="col-md-7 col-sm-6">
         <section id="scopo">
             <br>
-            <h1>Scopo del portale Capitolar-e</h1>
-            <p>Il sito Capitolar-<b>e</b> costituisce la porta d’ingresso ai progetti di ricerca che il LaMeDan ha promosso in collaborazione con la Biblioteca Capitolare di Verona. Le sezioni principali sono cinque: 1) il catalogo elettronico open-access dei manoscritti integrato con le immagini dei codici digitalizzati ad altissima definizione; 2) il catalogo storico che ospita le schede descrittive redatte da don Antonio Spagnolo, codificate e associate tramite un collegamento ipertestuale a una prima selezione di codici digitalizzati; 3) l’inventario elettronico dell’Archivio capitolare con le schede delle pergamene associate alle relative immagini digitalizzate; 4) una sezione di contributi audio-video che raccontano la storia e lo sviluppo del progetto; 5) una sezione che ospita i prodotti della ricerca scaturiti dalle attività del progetto; 6) una sezione dedicata alle iniziative di alta formazione (Summer schools, master, convegni) che hanno affiancato e si sono avvalse della consulenza del Laboratorio e del personale impiegato nel progetto.
+            <h1>Scopo del portale Capitolar-e</h1><p>
+            Il progetto nasce dalla collaborazione tra gruppi di ricerca afferenti ai Dipartimenti di Culture e Civiltà e di Informatica dell’Università di Verona, il Sistema Bibliotecario di Ateneo e la Biblioteca Capitolare di Verona. L’insieme di queste competenze ha consentito di realizzare un portale il cui obiettivo primario corre lungo un duplice binario: a) catalogazione e digitalizzazione; b) diagnostica. Lo scopo del punto a) è mettere a disposizione di studiosi e ricercatori, in modalità open access, manoscritti e documenti della Biblioteca capitolare di Verona. Per far questo il progetto si articola su tre sezioni principali: 1) Catalogo digitale dei manoscritti, che offre sia le descrizioni dei codici realizzate secondo i più moderni standard di internazionali sia le immagini digitalizzate in HD degli stessi; 2) Inventario delle pergamene dell’Archivio capitolare complete di scheda descrittiva e di immagini digitalizzate; 3) Catalogo storico dei manoscritti condotto sulla base del vecchio catalogo a schede di don Antonio Spagnolo (vd. sezione dedicata) e collegato alle immagini dei manoscritti indicizzati. Obiettivo del punto b) è l’esami diagnosticio di codici e pergamene per verificarne lo stato di conservazione e per compiere il rilievo e la elaborazione di immagini di manufatti danneggiati e illeggibili. Ciò consentirà il recupero di materiali di straordinario valore sia per quanto attiene alla tradizione testuale di alcuni testi capitali per la cultura occidentale, sia per quanto riguarda documenti cruciali per la storia dell’istituzione. Sono inoltre previste una sezione 4) dedicata ai prodotti della ricerca, ossia alle pubblicazioni realizzate su diversi supporti e in diversi formati che costituiscono il frutto tangibile dell’attività del progetto; una sezione 5) che ospita i contributi alla divulgazione pubblicati sia in formato audio-video, attraverso filmati e interviste radio-televisive, sia attraverso gli organi della carta stampata.
             </p>
-            <p>
+            <!-- <p>
             Per avere informazioni più dettagliate per la visita della Biblioteca Capitolare e del museo diocesano,
             vi invitiamo a consultare <a href="http://bibliotecacapitolare.org/">il sito ufficiale della biblioteca Capitolare di Verona</a>. 
-            </p>
+            </p> -->
         </section>
         </div>
-        <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=17AS0VmzVTH5n04pYBGr_E0vEuRFV87MkfrjzQk6zxg4&font=Default&lang=it&timenav_position=top&initial_zoom=1&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>  
-        
-        
+        <iframe src='https://cdn.knightlab.com/libs/timeline3/latest/embed/index.html?source=17AS0VmzVTH5n04pYBGr_E0vEuRFV87MkfrjzQk6zxg4&font=Default&lang=it&timenav_position=top&initial_zoom=2&height=650' width='100%' height='650' webkitallowfullscreen mozallowfullscreen allowfullscreen frameborder='0'></iframe>        
         <section id="storia" class="storia  py-5 ">
             <div class="row align-items-center container py-5 mx-auto">
                 
                 <div class="text col-lg-6 col-md-12 col-12">
                     <h6>DALLO STUDIO ALLA CONSERVAZIONE</h6>
                     <h1>Storia del progetto</h1>
-                        <p class="bd-lead">Il portale Capitolar-<b>e</b> è curato e mantenuto dall laboratorio <a href=https://sites.hss.univr.it/laboratori_integrati/laboratorio-lamedan/>LaMeDan</a>, parte
-                        dei <a href=https://sites.hss.univr.it/laboratori_integrati/>laboratori integrati</a> dell'Università di Verona.
-                        Questo portale è nato durante il  progetto DascabiDa per raccogliere e rendere accessibile il materiale digitalizzato
-                        durante il progetto e formare la base per i progetti futuri. Il 19 Marzo 2019 l'Università di Verona ha firmato una convenzione 
-                        con la biblioteca Capitolare di Verona per affiancarla nella gestione e valorizzazione dei beni culturali contenuti al suo intero.
+                        Il progetto mosse i primi passi nel 2017 a partire da un progetto di ricerca di base finanziato dall’Ateneo di Verona 
+                        (DascaBida: Dallo scriptorium carolingio alla biblioteca di Dante) e affidato in collaborazione dal 
+                        Dipartimento di Culture e Civiltà e dal Dipartimento di Informatica. Obiettivo di quella prima tappa era
+                         l’allestimento  
+                        di un Laboratorio da collocare presso la Biblioteca Capitolare di Verona per catalogare e digitalizzare i 
+                        manoscritti della Biblioteca Capitolare di Verona, a partire dal nucleo principale dei codici carolingi 
+                        fino all’epoca di Dante Alighieri. L’obiettivo prevedeva anche la ricostruzione integrale del contesto 
+                        storico nel suo complesso (artistico, religioso, storico-letterario) nel quale la biblioteca è venuta 
+                        crescendo, investendo dunque anche il Complesso dell’Archivio del Capitolo. Per la sua realizzazione 
+                        del progetto furono acquistati hardware, software, supporti per l’archiviazione di metadati, 
+                        attrezzature fotografiche e di precisione che costituirono il primo nucleo del Laboratorio, 
+                        inizialmente collocato in una stanza attigua al salone Arcidiacono Pacifico e appositamente allestita. I primi, incoraggianti risultati del progetto hanno indotto l’Ateneo, con delibera del Consiglio di Amministrazione del 1 febbraio 2019, a investire ulteriori ingenti risorse per l’acquisto di strumentazione più performante e per assicurare il personale necessario a supporto delle attività di ricerca: il progetto DascabiDa è così confluito nel neonato Laboratorio di studi Medievali e Danteschi (LaMeDan) del Dipartimento di Culture e Civiltà. Con la fattiva collaborazione del Sistema Bibliotecario di Ateneo e dell’Ufficio Tecnico dell’Università di Verona, è stata quindi progettata una nuova sala consultazione all’interno della Biblioteca Capitolare, da realizzare al secondo piano dell’edificio che già ospitava la vecchia sala, accanto alla quale sarebbe sorto il nuovo Laboratorio di diagnostica e digitalizzazione. A tale scopo l’Università di Verona, in data 19 marzo 2019, ha stipulato con il Capitolo della Cattedrale una <a href=https://www.univrmagazine.it/2019/03/19/firmata-la-convenzione-tra-universita-di-verona-e-biblioteca-capitolare/>convenzione</a> quinquennale che assicura la collaborazione tra 
+                        le due istituzioni. La nuova sala consultazione e il nuovo laboratorio sono stati portati a termine in tempi record, attrezzati secondo tutti gli standard di sicurezza e funzionalità richiesti dalla normativa vigente, con un collegamento internet veloce direttamente connesso alla rete e alle banche dati di Ateneo messi
+
+gratuitamente a disposizione di tutti gli utenti che si registreranno presso la sala consultazione stessa. Il progetto vede attualmente impegnati, oltre ai docenti del LaMeDan (afferenti ai due dipartimenti di Culture e Civilità e di Informatica), un tecnologo, un bibliotecario dell’Università di Verona, due assegnisti di ricerca e una dottoranda, che collaborano a vario titolo nella gestione degli strumenti del Laboratorio e del sito web, e nella descrizione dei manoscritti e dei documenti dell’archivio.
                         </p>
               </div>
               <div class="img col-lg-6 col-md-12 col-12">
