--- a/templates/index2.html
+++ b/templates/index2.html
@@ -58,6 +58,32 @@ window.onload = function(){
   </div>
 </section>
 
+<section id="formazione" class="about py-5 ">
+  <div class="row align-items-center container py-5 mx-auto">
+    <div class="text col-lg-6 col-md-12 col-12">
+      <h6>FORMAZIONE E DIVULGAZIONE</h6>
+      <h1>Alta formazione e prodotti della ricerca</h1>
+      <p>
+        Il progetto dissemina i risultati  e le conoscenze acquisite attraverso diverse modalità per 
+        raggiungere gli studiosi ed il grande pubblico. 
+      </p>
+      <p>
+        Consulta i vari link per ottenere maggiori informazioni sull'<a href=/altaformazione>offerta formativa</a>, 
+        le <a href=/prodottidellaricerca>pubblicazioni</a> open-access ed una lista delle apparizioni sui <a href=/media>media</a>.
+      </p>
+ <!--   <p> L'<a href=https://www.univr.it/it/>Università di Verona</a> in collaborazione con la <a href=http://bibliotecacapitolare.org/en/the-biblioteca-capitolare-of-verona/>Fondazione Biblioteca Capitolare </a>
+        ha iniziato una campagna di analisi, digitalizzazione e valorizzazione
+        dei beni culturali contenuti all'interno della Biblioteca Capitolare di Verona.
+        Il progetto multidisciplinare coinvolge il <a href=https://www.dcuci.univr.it/>Dipartimento di Culture e Civiltà</a> ed il <a href=https://www.di.univr.it/>Dipartimento di Informatica</a>
+        insieme al <a href=https://www.univr.it/it/organizzazione/sistema-bibliotecario-di-ateneo/>Sistema Bibliotecario di Ateneo</a>.
+        Questo sito ospita le risorse digitali del progetto.</p> -->
+    </div>
+    <div class="img col-lg-6 col-md-12 col-12">
+      <img class="img-fluid" src={{url_for('static',filename='imgs/master.jpeg')}} alt="Basso rilevo che mostra un maestro con dei discepoli.">  
+    </div>
+  </div>
+</section>
+<!-- 
 <section id="esplora" class="esplora  py-5 ">
   <div class="row  align-items-center container py-5 mx-auto">
     <div class="img col-lg-6 col-md-12 col-12 " alt="Grafico rappresentante le dimensioni ed il numero dei beni contenuti nella collezione.">
@@ -73,6 +99,7 @@ window.onload = function(){
   </div>
 </section>
 
+ -->
 <section id="vai" class="vari  py-5 ">
   <div class="row align-items-center container py-5 mx-auto">
     <div class="text col-lg-6 col-md-12 col-12">
