--- a/templates/altaformazione.html
+++ b/templates/altaformazione.html
@@ -46,7 +46,7 @@
                         </p>
               </div>
               <div class="img col-lg-6 col-md-12 col-12">
-                <img class="img-fluid" src="https://lh3.googleusercontent.com/proxy/EFRyb8ChjSuMJmONKfSNW-cN7EojYoMm4w9nGHzu0nCk3wlVYI_chqwH8GZ7dCyordUOWc4hU13pgQWSXpHxw5QI0vIZ_Q9zKZk9dhOD1LgWKA">
+                <img class="img-fluid" src={{url_for('static',filename='imgs/summerschool.jpeg')}}>
             </div>
             </div>
           </section>
