Aggiunti link per scaricare pdf

--- a/templates/altaformazione.html
+++ b/templates/altaformazione.html
@@ -43,7 +43,12 @@
 
                     Per approfondire i temi e i contenuti proposti nelle due edizioni, se ne vedano qui sotto i relativi
                     programmi.
-                        </p>
+                </p>
+                <p>
+                    <a href="https://www.dcuci.univr.it/documenti/Iniziativa/dall/dall383230.pdf" class="btn btn-info" role="button">Edizione 2019</a>
+                    <a href="https://docs.univr.it/documenti/Iniziativa/dall/dall775500.pdf" class="btn btn-info" role="button">Edizione 2020 </a>
+                </p>
+                        
               </div>
               <div class="img col-lg-6 col-md-12 col-12">
                 <img class="img-fluid" src={{url_for('static',filename='imgs/summerschool.jpeg')}}>
